[package]
name = "nfs_mirror"
version = "0.1.1"
edition = "2024"
license-file = "LICENSE"
description = "Mirror a local directory into an NFS shared service."
homepage = "https://github.com/w-mai/nfs_mirror"
authors = ["Benign X <1341398182@qq.com>"]

[dependencies]
zerofs_nfsserve = "0.15.0"
async-trait = "0.1.89"
tokio = { version = "1.48.0", features = ["net", "io-util", "sync", "fs", "rt", "macros", "rt-multi-thread"], default-features = false }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
intaglio = "1.11.0"
clap = { version = "4.5.0", features = ["derive"] }
libc = "0.2.0"
toml = "0.9.8"
serde = { version = "1.0.217", features = ["derive"] }
